Change bohemaian to boho

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <h3>Twists</h3>
           <ul>
             <li>Passion</li>
-            <li>Bohemian Knotless</li>
+            <li>Boho Knotless</li>
             <li>Kinky</li>
             <li>Regular</li>
           </ul>
